--- a/cardapio.html
+++ b/cardapio.html
@@ -807,7 +807,7 @@
         <!-- Seção: Adicionais, Lanches e Pastéis -->
         <div class="row mb-5" style="margin-top: 2em;">
           <div class="col-12">
-            <h2 class="section-title">Adicionais, Lanches e Pastéis</h2>
+            <h2 class="section-title">Adicionais</h2>
             <div class="section-underline"></div>
           </div>
 
